# actual-reader

./: .gitignore  ADR.md  ARCHITECTURE.md  CHANGELOG.md  GLOSSARY.md  PRD.md  README.md  SCHEMAS.md  STACK.md  package.json  pnpm-lock.yaml
src/: App.tsx  index.css
src-solid/: App.tsx  index.css  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
src-solid/components/: BookCard.tsx  BookListItem.tsx  ImportModal.tsx  NarrationPlayer.tsx  Spinner.tsx  index.ts
src-solid/stores/: index.ts  libraryStore.ts  readerStore.ts  settingsStore.ts
src-solid/tauri/: commands.ts
src-solid/types/: index.ts
src-solid/views/: GeneratorView.tsx  LibraryView.tsx  ReaderView.tsx  SettingsView.tsx  index.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: bundle.rs  library.rs  mod.rs  reader.rs  settings.rs  sync.rs  tts.rs
src-tauri/src/models/: book.rs  marker.rs  mod.rs  progress.rs  segment.rs  voice.rs
src-tauri/src/services/: mod.rs  tts.rs  vision.rs
src-tauri/src/services/parser/: epub.rs  markdown.rs  mod.rs  txt.rs
src-tauri/src/storage/: db.rs  files.rs  mod.rs
src/components/: BookCard.tsx  BookListItem.tsx  ImportModal.tsx  NarrationPlayer.tsx  Spinner.tsx  index.ts
src/hooks/: index.ts  useLibrary.ts  useNarration.ts  useSync.ts
src/stores/: index.ts  libraryStore.ts  readerStore.ts  settingsStore.ts
src/tauri/: commands.ts  events.ts  index.ts
src/types/: index.ts
src/views/: GeneratorView.tsx  LibraryView.tsx  ReaderView.tsx  SettingsView.tsx  index.ts
tests/: e2e.test.mjs
tts-engine/: bridge.py  requirements.txt  setup.sh
vision-engine/: bridge.py  requirements.txt
