[package]
name = "actual-reader"
version = "0.1.0"
description = "A cross-platform ebook reader with synchronized audio narration"
authors = ["Actual Reader Team"]
license = "MIT"
repository = "https://github.com/actualreader/actual-reader"
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "actual_reader_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5", features = [] }

[dependencies]
# Tauri framework
tauri = { version = "2.0", features = [] }
tauri-plugin-log = "2"
tauri-plugin-dialog = "2"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Database
rusqlite = { version = "0.31", features = ["bundled"] }

# Async runtime
tokio = { version = "1.36", features = ["full"] }

# ID generation
uuid = { version = "1.7", features = ["v4", "serde"] }

# Bundle/archive handling
zip = "2.1"

# Document parsing
epub = "2.1"
pulldown-cmark = "0.10"

# Service discovery (for sync)
mdns-sd = "0.10"
flume = "0.11"  # Re-used from mdns-sd for receiver timeout matching

# HTTP server for sync
axum = "0.7"
tower-http = { version = "0.5", features = ["cors"] }

# HTTP client for sync
reqwest = { version = "0.12", features = ["json"] }

# Hostname discovery
hostname = "0.4"

# Logging
log = "0.4"

# Error handling
thiserror = "1.0"

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

[dev-dependencies]
tempfile = "3.24.0"
